fix for login form inputs that are too small

--- a/app/assets/stylesheets/controller/articles.css.scss
+++ b/app/assets/stylesheets/controller/articles.css.scss
@@ -1,10 +1,11 @@
 @import "mixins/all";
 
-.formtastic .stringish input {
-  @include at-breakpoint($bp-tablet) {
-    width:30%;
-  }
-}
+// Why was this overwritten? It scews with the login form. -KK
+// .formtastic .stringish input {
+//   @include at-breakpoint($bp-tablet) {
+//     width:30%;
+//   }
+// }
 
 .article-form {
   @include at-breakpoint($bp-tablet) {
